smooth camera animation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ add_executable(1projekt
         src/1projekt/airplane.h
         src/1projekt/animation_curve.h
         src/1projekt/keyframe.h
+        src/1projekt/camera_keyframe.h
 )
 target_link_libraries(1projekt ppgso shaders)
 install(TARGETS 1projekt DESTINATION .)
